<?xml version="1.0"?>
<package format="2">
  <name>tf_odom_publisher</name>
  <version>0.0.0</version>
  <description>The tf_odom_publisher package</description>

  <maintainer email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>

</package>
